src/test/ui/feature-gate-abi-msp430-interrupt.stderr
error[E0658]: msp430-interrupt ABI is experimental and subject to change (see issue #38487)
  --> $DIR/feature-gate-abi-msp430-interrupt.rs:14:1
   |
LL | extern "msp430-interrupt" fn foo() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(abi_msp430_interrupt)] to the crate attributes to enable

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0658"
